--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ But it must have the following features:
 </head>
 <body>
   <div class="poster">
-    <img class="motivational-png" src="./assets/images/radhe radhe.jpg" alt="shri radha">
+    <img class="motivational-png" src=".radhe radhe.jpg" alt="shri radha">
     <h1>“Man is made by his belief. As he believes, so he is.”</h1>
     <p>“There are three gates leading to the hell of self-destruction for the soul—lust, anger, and greed. Therefore, one should abandon all three.”</p>
 
